Rewrite the README as a step by step guide for server owners
Point to the Temurin 17 JDK the agent is tested with, give ready to use
start scripts (Linux, Windows, Pterodactyl), and list the common
problems. Technical details are cut down to a short summary.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DszbR9jSTnJF2dtbGNiQRv